# nosecrets

./: .gitignore  .pre-commit-hooks.yaml  ARCHITECTURE.md  CONCEPT.md  Cargo.toml  LICENSE  README.md  RULES_SPEC.md
.github/: secret_scanning.yml
.github/workflows/: ci.yml  on-tag.yml  release.yml
crates/nosecrets-cli/: Cargo.toml  README.md
crates/nosecrets-cli/src/: main.rs
crates/nosecrets-core/: Cargo.toml  README.md
crates/nosecrets-core/src/: lib.rs
crates/nosecrets-core/tests/: detection_tests.rs
crates/nosecrets-filter/: Cargo.toml  README.md
crates/nosecrets-filter/src/: lib.rs
crates/nosecrets-report/: Cargo.toml  README.md
crates/nosecrets-report/src/: lib.rs
crates/nosecrets-rules/: Cargo.toml  README.md
crates/nosecrets-rules/rules/: cloud.toml  database.toml  deploy.toml  generic.toml  payment.toml
crates/nosecrets-rules/src/: lib.rs
rules/: code.toml  communication.toml  generic.toml
