[workspace]
members = [
    "crates/nosecrets-cli",
    "crates/nosecrets-core",
    "crates/nosecrets-rules",
    "crates/nosecrets-filter",
    "crates/nosecrets-report",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/casoon/nosecrets"
rust-version = "1.83"
description = "Fast, offline secret scanner for Git pre-commit hooks"
keywords = ["security", "secrets", "git", "pre-commit", "scanner"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Regex & Pattern Matching
regex = "1"
aho-corasick = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async/Parallel
rayon = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
thiserror = "2"
anyhow = "1"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
once_cell = "1"
globset = "0.4"

# Git
gix = { version = "0.68", default-features = false, features = ["revision"] }

# Terminal
termcolor = "1"
console = "0.15"

# Testing
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
