[package]
name = "nosecrets-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
regex.workspace = true
aho-corasick.workspace = true
rayon.workspace = true
walkdir.workspace = true
gix.workspace = true
globset.workspace = true
nosecrets-rules = { path = "../nosecrets-rules" }
nosecrets-filter = { path = "../nosecrets-filter" }
nosecrets-report = { path = "../nosecrets-report" }

[dev-dependencies]
tempfile.workspace = true
