[package]
name = "nosecrets-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Core scanning engine for nosecrets secret scanner"
keywords = ["security", "secrets", "scanner"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
anyhow.workspace = true
regex.workspace = true
aho-corasick.workspace = true
rayon.workspace = true
walkdir.workspace = true
gix.workspace = true
globset.workspace = true
nosecrets-rules = { path = "../nosecrets-rules", version = "0.1.7" }
nosecrets-filter = { path = "../nosecrets-filter", version = "0.1.7" }
nosecrets-report = { path = "../nosecrets-report", version = "0.1.7" }

[dev-dependencies]
tempfile.workspace = true
