[package]
name = "nosecrets-filter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
toml.workspace = true
regex.workspace = true
globset.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
