[package]
name = "nosecrets-filter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Filtering and allowlist logic for nosecrets secret scanner"
keywords = ["security", "secrets", "filter"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
serde.workspace = true
toml.workspace = true
regex.workspace = true
globset.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
