[package]
name = "nosecrets-report"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
console.workspace = true
thiserror.workspace = true
nosecrets-rules = { path = "../nosecrets-rules" }
