[package]
name = "nosecrets-report"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Reporting and output formatting for nosecrets secret scanner"
keywords = ["security", "secrets", "report"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
console.workspace = true
thiserror.workspace = true
nosecrets-rules = { path = "../nosecrets-rules", version = "0.1.7" }
