[package]
name = "nosecrets-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Rule definitions and parsing for nosecrets secret scanner"
keywords = ["security", "secrets", "rules"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
